# rustcomp

./: .gitignore  Makefile  README.md  et --hard 93a6037  et --hard HEAD~2
arch/: Cargo.toml
arch/src/: addr.rs  lib.rs  pagetable.rs
arch/src/loongarch64/: console.rs  mod.rs  page_table.rs  trap.rs
arch/src/riscv64/: interrupt.rs
arch/src/x86_64/: trap.S:Zone.Identifier
buffer/: Cargo.toml
buffer/src/: block_cache.rs  lib.rs
config/src/: lib.rs
device/: Cargo.toml
device/src/: block_dev.rs  lib.rs
easy-fs/: Cargo.toml
easy-fs-fuse/: Cargo.toml
easy-fs-fuse/src/: main.rs
easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  dentry.rs  efs.rs  file.rs  layout.rs  lib.rs  vfs.rs
ext4/: Cargo.toml
ext4-fs-fuse/: Cargo.toml  gen_img.sh
ext4-fs-fuse/src/: main.rs
ext4-test-fuse/: Cargo.toml
ext4-test-fuse/src/: main.rs
ext4/src/: block.rs  dentry.rs  file.rs  fs.rs  inode.rs  lib.rs  superblock.rs
logger/: Cargo.toml
logger/src/: lib.rs
os/: Cargo.toml  Makefile  ls2k_debug.sh
os/arch/: Cargo.toml
os/arch/src/: pagetable.rs  time.rs
os/src/: config.rs  console.rs  lang_items.rs  linker-loongarch64.ld  logging.rs  main.rs  timer.rs
os/src/boards/: qemu.rs
os/src/drivers/: mod.rs  plic.rs  virtio.rs
os/src/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs
os/src/mm/: frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs  vpn_range.rs
os/src/sync/: cond.rs  mod.rs  up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: action.rs  aux.rs  fdtable.rs  futex.rs  info.rs  manager.rs  mod.rs  pid.rs  processor.rs  sigaction.rs  signal.rs  task.rs  tid.rs
os/src/trap/: mod.rs
sync/: Cargo.toml
sync/src/: kspinbase.rs  kspinlib.rs  lib.rs
system-result/: Cargo.toml
system-result/src/: lib.rs
testcase/basic/loongarch64-unknown-none/: busybox  initproc  (+3 more)
testinit/: initprocla  initprocrv
time/: Cargo.toml
time/src/: lib.rs
user/: Cargo.toml  Makefile
user/.cargo/: config.toml
user/src/: lib.rs  linker.ld  syscall.rs
vfs/: Cargo.toml
vfs-defs/: Cargo.toml
vfs-defs/src/: dentry.rs  dentry_cache.rs  file.rs  filesystemtype.rs  inode.rs  lib.rs  superblock.rs
vfs/src/: fdtable.rs  lib.rs
vfs/src/devfs/: cpu_dma_latency.rs  mod.rs  null.rs  rtc.rs  urandom.rs  zero.rs
vfs/src/memfs/: dentry.rs  file.rs  inode.rs  mod.rs
vfs/src/procfs/: exe.rs  meminfo.rs  mod.rs  mounts.rs
vfs/src/tmpfs/: mod.rs
(+49 files in other folders)
