[package]
name = "easy-fs"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
vfs-defs = { path = "../vfs-defs" }
device = { path = "../device" }
config = { path = "../config" }
system-result = { path = "../system-result" }
buffer = { path = "../buffer" }

[profile.release]
opt-level = 0  # 禁用优化
debug = true

[features]
board_qemu = []
board_k210 = []